--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2021"
 dirs = "4.0.0"
 rust-ini = "0.18.0"
 thiserror = "1.0.31"
+once_cell = "1.10.0"
 
 [dev-dependencies]
 speculoos = "0.9.0"
 anyhow = "1.0.57"
+linicon = "2.3.0"
