--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ once_cell = "1.10.0"
 speculoos = "0.9.0"
 anyhow = "1.0.57"
 linicon = "2.3.0"
+criterion = "0.3"
+
+[[bench]]
+name = "simple_lookup"
+harness = false
