--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ dirs = "4.0.0"
 rust-ini = "0.18.0"
 thiserror = "1.0.31"
 once_cell = "1.10.0"
+xdg = "2.4.1"
 
 [dev-dependencies]
 speculoos = "0.9.0"
