--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rust-ini = "0.20.0"
 thiserror = "1.0.56"
 once_cell = "1.19.0"
 xdg = "2.5.2"
+tracing = "0.1.41"
 
 [dev-dependencies]
 speculoos = "0.11.0"
