--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,18 +11,17 @@ keywords = ["icons", "gui", "freedesktop"]
 
 [dependencies]
 dirs = "5.0.1"
-rust-ini = "0.20.0"
 thiserror = "1.0.56"
 once_cell = "1.19.0"
 xdg = "2.5.2"
 tracing = "0.1.41"
+ini_core = "0.2.0"
 
 [dev-dependencies]
 speculoos = "0.11.0"
-anyhow = "1.0.79"
 linicon = "2.3.0"
-gtk4 = "0.4.7"
-criterion = "0.3.5"
+gtk4 = "0.9"
+criterion = "0.5"
 
 [features]
 default = []
